--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "serve -s dist -l 3000",
-    "build": "tsc && vite build",
+    "start": "serve -s dist -l 80",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
